k1_fundamentals/07_deploy-app-02-external-access/manifests/app.deployment.with.pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-data
              mountPath: /app
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
