k1_fundamentals/07_deploy-app-02-external-access/manifests/app.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-issuer"
  labels:
    app: hello
spec:
  tls:
    - hosts:
        - app-ext.TODO-YOUR-DNS-ZONE.loodse.training
      secretName: loodse-dev-tls
  rules:
    - host: app-ext.TODO-YOUR-DNS-ZONE.loodse.training
      http:
        paths:
          - path: /
            backend:
              serviceName: helloweb
              servicePort: 80
